[project]
name = "fastapi-all-helper"
version = "0.1.2.2"
description = "Helper classes and utilities for FastAPI and SQLAlchemy"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "NEFOR", email = "n7for8572@gmail.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.127.0",
    "g4f>=6.7.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/neforceo/fastapi-helper-"
Repository = "https://github.com/neforceo/fastapi-helper-"
Issues = "https://github.com/neforceo/fastapi-helper/issues-"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_helper"]
